opt/kubernetes/nginx-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug
spec:
  selector:
    matchLabels:
      app: debug
  template:
    metadata:
      labels:
        app: debug
    spec:
      containers:
        - name: debug
          image: "nginx:>= 1.16, <= 1.18"
          command:
            - sleep
          args:
            - +Inf
