opt/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-semantic-image-controller
spec:
  selector:
    matchLabels:
      app: kubernetes-semantic-image-controller
  template:
    metadata:
      labels:
        app: kubernetes-semantic-image-controller
    spec:
      volumes:
        - name: certs
          secret:
            secretName: kubernetes-semantic-image-controller
      containers:
        - name: kubernetes-semantic-image-controller
          image: kubernetes-semantic-image-controller:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: certs
              mountPath: /certs
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-semantic-image-controller
spec:
  selector:
    app: kubernetes-semantic-image-controller
  ports:
    - port: 443
