opt/kubernetes/admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kubernetes-semantic-image-controller
webhooks:
  - name: kubernetes-semantic-image-controller.default.svc.cluster.local
    rules:
      - operations:
          - "CREATE"
        apiGroups:
          - ""
        apiVersions:
          - "v1"
        resources:
          - "pods"
    failurePolicy: Ignore
    clientConfig:
      service:
        path: "/mutate"
        port: 443
        name: kubernetes-semantic-image-controller
        namespace: default
      caBundle: <ca-bundle>
    sideEffects: None
    admissionReviewVersions:
      - "v1"
